--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Firebase Example</string>
     <string name="client_id">716754275373-24r7994r01apl545rk7qd5ok395bqfi7.apps.googleusercontent.com</string>
     <string name="title_activity_contact">ContactActivity</string>
+    <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_chat">ChatActivity</string>
 </resources>
